fix mobile modal spacing

--- a/src/component/MovieData/MovieData.scss
+++ b/src/component/MovieData/MovieData.scss
@@ -19,40 +19,44 @@
   width: 312px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  background: rgba(155, 155, 155, 0.482);
+  // align-items: center;
 
   .zg-poster-and-data {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    justify-content: space-evenly;
     .zg-modal-poster {
-      margin: 20px;
+      margin: 10px;
       border-radius: 7px;
-      height: 300px;
-      width: 200px;
+      height: 150px;
+      width: 100px;
     }
 
     .zg-modal-data {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-evenly;
+      // background: pink;
+      // display: flex;
+      // flex-direction: column;
+
       .zg-movie-ratings {
-        background: yellow;
+        // background: yellow;
         display: flex;
         flex-direction: row;
-        padding: 20px;
+        justify-content: center;
+        padding: 10px;
         border: 1px solid rgb(67, 67, 67);
         font-size: 12px;
-        margin-right: 0px;
+        // margin-right: 0px;
+        // height: 50px;
 
         .zg-movie-rating {
-          background: rgb(0, 255, 0);
+          white-space: normal;
+          // background: rgb(0, 255, 0);
           display: flex;
           flex-direction: column;
           padding: 0 4px;
+          height: 40px;
           .zg-rating-value {
             padding-bottom: 8px;
           }
@@ -61,7 +65,19 @@
         }
       }
       .zg-movie-instances {
-        // margin-top: 15px
+        margin-top: 2px;
+        .zg-timestamps {
+
+          .zg-timestamp {
+            //  background: rgb(194, 103, 194);
+            .zg-episode-reference {
+              margin: 0;
+            }
+            .zg-timestamp-link {
+              margin-top: 5px;
+            }
+          }
+        }
       }
     }
   }
@@ -70,6 +86,7 @@
     border: none;
     background: none;
     font-size: 15px;
+    margin: 15px 0 5px 0;
   }
 }
 
@@ -96,9 +113,12 @@
       flex-direction: row;
       align-items: center;
       align-content: center;
+      margin-right: 20px;
       .zg-modal-poster {
         margin: 20px;
         border-radius: 7px;
+        height: 300px;
+        width: 200px;
       }
 
       .zg-modal-data {
